upgrading before deadline